--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,7 @@
   <div class="panel">
     <input id="file-upload" class="hidden" type="file" accept="image/x-png,image/gif,image/jpeg" />
     <label for="file-upload" id="file-drag" class="upload-box">
+	  <div id="upload-caption">Sculz-Yomut Image Classifier</div>	
       <div id="upload-caption">Drop image here or click to select</div>
       <img id="image-preview" class="hidden" />
     </label>
