--- a/templates/index.html
+++ b/templates/index.html
@@ -2,16 +2,15 @@
 
 <div class="main">
   <div class="title">
-    <h3>Image Classifier</h3>
-    <!-- <p>
-      <small>A web app demo</small>
-    </p> -->
+    <h3>Schulz-Yomut<br>Image Classifier</h3>
+    <p>
+      Eine kleine Web Applikation
+    </p>
   </div>
 
   <div class="panel">
     <input id="file-upload" class="hidden" type="file" accept="image/x-png,image/gif,image/jpeg" />
     <label for="file-upload" id="file-drag" class="upload-box">
-	  <div id="upload-caption">Sculz-Yomut Image Classifier</div>	
       <div id="upload-caption">Drop image here or click to select</div>
       <img id="image-preview" class="hidden" />
     </label>
@@ -29,5 +28,7 @@
     </svg>
   </div>
 </div>
-
+<div>
+	<small>Quelle: https://github.com/imfing/keras-flask-deploy-webapp</small>
+</div>
 {% endblock %}
