--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
     </svg>
   </div>
 </div>
-<div>
-	<small>Quelle: https://github.com/imfing/keras-flask-deploy-webapp</small>
+<div style="text-align: center;">
+	<small>Quelle: <a href="https://github.com/imfing/keras-flask-deploy-webapp" target="_blank">https://github.com/imfing/keras-flask-deploy-webapp</a></small><img source="../static/link.png" >
 </div>
 {% endblock %}
