--- a/templates/index.html
+++ b/templates/index.html
@@ -29,6 +29,6 @@
   </div>
 </div>
 <div style="text-align: center;">
-	<small>Quelle: <a href="https://github.com/imfing/keras-flask-deploy-webapp" target="_blank">https://github.com/imfing/keras-flask-deploy-webapp</a></small><img source="../static/link.png" >
+	<small>Quelle: <a href="https://github.com/imfing/keras-flask-deploy-webapp" target="_blank">https://github.com/imfing/keras-flask-deploy-webapp</a></small><img src="../static/link.png" style="height: 12px;width: 12px;margin-left: 4px;" >
 </div>
 {% endblock %}
