--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,8 @@
   <div class="title">
     <h3>Schulz-Yomut<br>Image Classifier</h3>
     <p>
-      Eine kleine Web Applikation
+      Eine kleine Web Applikation<br/>
+	  <small>Quelle: <a href="https://github.com/imfing/keras-flask-deploy-webapp" target="_blank">https://github.com/imfing/keras-flask-deploy-webapp</a></small><img src="../static/link.png" style="height: 12px;width: 12px;margin-left: 4px;" >
     </p>
   </div>
 
@@ -15,7 +16,7 @@
       <img id="image-preview" class="hidden" />
     </label>
   </div>
-  <div style="margin-bottom: 2rem;">
+  <div style="margin-bottom: 20px">
     <input type="button" value="Submit" class="button" onclick="submitImage();" />
     <input type="button" value="Clear" class="button" onclick="clearImage();" />
   </div>
@@ -29,6 +30,6 @@
   </div>
 </div>
 <div style="text-align: center;">
-	<small>Quelle: <a href="https://github.com/imfing/keras-flask-deploy-webapp" target="_blank">https://github.com/imfing/keras-flask-deploy-webapp</a></small><img src="../static/link.png" style="height: 12px;width: 12px;margin-left: 4px;" >
+	<img src="../static/qrcode.png" style="height: 200px;width: 200px;margin-left: 4px;" >
 </div>
 {% endblock %}
