--- a/static/main.css
+++ b/static/main.css
@@ -115,12 +115,15 @@ body {
 }
 
 #pred-result {
-  color: white;
   font-size: 1.5rem;
+  margin-bottom: 10px;
+  /*
+  color: white;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  */
 }
 
 #loader {
